fix: 記事の間隔をgapに修正

--- a/app/src/components/organisms/BasePostList/BasePostList.module.css
+++ b/app/src/components/organisms/BasePostList/BasePostList.module.css
@@ -2,7 +2,7 @@
     height: 530px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 21px;
 }
 
 .postsPage {
