--- a/app/src/components/templates/PostsView/PostsView.module.css
+++ b/app/src/components/templates/PostsView/PostsView.module.css
@@ -1,8 +1,8 @@
 .wrapper {
     width: 100%;
-    height: 640px;
+    min-height: 640px;
     padding: 0 250px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 21px;
 }
